fixing safari page  on mobile

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5110,7 +5110,7 @@ body {
 
 /* line 13 : /Users/thomasamundsen/Documents/Traxnwaxcode/beta/node_modules/polvo/node_modules/polvo-stylus/node_modules/stylus/lib/functions/index.styl */
 
-/* line 730 : /Users/thomasamundsen/Documents/Traxnwaxcode/beta/node_modules/polvo/node_modules/polvo-stylus/node_modules/nib/lib/nib/index.styl */
+/* line 750 : /Users/thomasamundsen/Documents/Traxnwaxcode/beta/node_modules/polvo/node_modules/polvo-stylus/node_modules/nib/lib/nib/index.styl */
 
 /* line 10 : /Users/thomasamundsen/Documents/Traxnwaxcode/beta/node_modules/polvo/node_modules/polvo-stylus/node_modules/nib/lib/nib/index.styl */
 
@@ -5130,7 +5130,7 @@ body {
 
 /* line 90 : /Users/thomasamundsen/Documents/Traxnwaxcode/beta/node_modules/polvo/node_modules/polvo-stylus/node_modules/nib/lib/nib/flex.styl */
 
-/* line 730 : /Users/thomasamundsen/Documents/Traxnwaxcode/beta/node_modules/polvo/node_modules/polvo-stylus/node_modules/nib/lib/nib/gradients.styl */
+/* line 750 : /Users/thomasamundsen/Documents/Traxnwaxcode/beta/node_modules/polvo/node_modules/polvo-stylus/node_modules/nib/lib/nib/gradients.styl */
 
 /* line 11 : /Users/thomasamundsen/Documents/Traxnwaxcode/beta/node_modules/polvo/node_modules/polvo-stylus/node_modules/nib/lib/nib/gradients.styl */
 
@@ -5158,7 +5158,7 @@ body {
 
 /* line 5 : /Users/thomasamundsen/Documents/Traxnwaxcode/beta/node_modules/polvo/node_modules/polvo-stylus/node_modules/nib/lib/nib/reset.styl */
 
-/* line 730 : /Users/thomasamundsen/Documents/Traxnwaxcode/beta/node_modules/polvo/node_modules/polvo-stylus/node_modules/nib/lib/nib/text/index.styl */
+/* line 750 : /Users/thomasamundsen/Documents/Traxnwaxcode/beta/node_modules/polvo/node_modules/polvo-stylus/node_modules/nib/lib/nib/text/index.styl */
 
 /* line 12 : /Users/thomasamundsen/Documents/Traxnwaxcode/beta/node_modules/polvo/node_modules/polvo-stylus/node_modules/nib/lib/nib/text/index.styl */
 
@@ -6242,25 +6242,27 @@ body .notifyjs-container .notifyjs-loopcast_success-base {
   cursor: pointer;
 }
 
-/* line 656 : /Users/thomasamundsen/Documents/Traxnwaxcode/beta/src/frontend/styles/pages/all.styl */
+/* line 658 : /Users/thomasamundsen/Documents/Traxnwaxcode/beta/src/frontend/styles/pages/all.styl */
 .notfound {
-  margin-top: 150px;
+  margin-top: 90px;
   color: #fff;
   font-size: 60px;
+  line-height: 60px;
+  margin-bottom: 10px;
 }
 
-/* line 661 : /Users/thomasamundsen/Documents/Traxnwaxcode/beta/src/frontend/styles/pages/all.styl */
+/* line 665 : /Users/thomasamundsen/Documents/Traxnwaxcode/beta/src/frontend/styles/pages/all.styl */
 .notfoundp {
   margin-top: 20px;
   color: #fff;
 }
 
-/* line 666 : /Users/thomasamundsen/Documents/Traxnwaxcode/beta/src/frontend/styles/pages/all.styl */
+/* line 670 : /Users/thomasamundsen/Documents/Traxnwaxcode/beta/src/frontend/styles/pages/all.styl */
 .notfoundmain {
   color: #fff;
 }
 
-/* line 669 : /Users/thomasamundsen/Documents/Traxnwaxcode/beta/src/frontend/styles/pages/all.styl */
+/* line 673 : /Users/thomasamundsen/Documents/Traxnwaxcode/beta/src/frontend/styles/pages/all.styl */
 .notfoundbutton {
   background-color: #07d159;
   margin-top: 40px;
@@ -6274,12 +6276,12 @@ body .notifyjs-container .notifyjs-loopcast_success-base {
   font-weight: bold;
 }
 
-/* line 682 : /Users/thomasamundsen/Documents/Traxnwaxcode/beta/src/frontend/styles/pages/all.styl */
+/* line 686 : /Users/thomasamundsen/Documents/Traxnwaxcode/beta/src/frontend/styles/pages/all.styl */
 .notfoundbutton:hover {
   background-color: #0ca94c;
 }
 
-/* line 685 : /Users/thomasamundsen/Documents/Traxnwaxcode/beta/src/frontend/styles/pages/all.styl */
+/* line 689 : /Users/thomasamundsen/Documents/Traxnwaxcode/beta/src/frontend/styles/pages/all.styl */
 .notfoundimage,
 .imagecontainer_notfound {
   background-color: #262626;
@@ -6288,18 +6290,18 @@ body .notifyjs-container .notifyjs-loopcast_success-base {
   width: 100%;
 }
 
-/* line 694 : /Users/thomasamundsen/Documents/Traxnwaxcode/beta/src/frontend/styles/pages/all.styl */
+/* line 698 : /Users/thomasamundsen/Documents/Traxnwaxcode/beta/src/frontend/styles/pages/all.styl */
 .browser {
   margin-top: 100px;
 }
 
-/* line 698 : /Users/thomasamundsen/Documents/Traxnwaxcode/beta/src/frontend/styles/pages/all.styl */
+/* line 702 : /Users/thomasamundsen/Documents/Traxnwaxcode/beta/src/frontend/styles/pages/all.styl */
 .browser_p {
   margin-top: 20px;
   margin-bottom: 40px;
 }
 
-/* line 702 : /Users/thomasamundsen/Documents/Traxnwaxcode/beta/src/frontend/styles/pages/all.styl */
+/* line 706 : /Users/thomasamundsen/Documents/Traxnwaxcode/beta/src/frontend/styles/pages/all.styl */
 .advert_s1 {
   width: 100%;
   background: #f00;
@@ -6307,12 +6309,12 @@ body .notifyjs-container .notifyjs-loopcast_success-base {
   background: #262626;
 }
 
-/* line 709 : /Users/thomasamundsen/Documents/Traxnwaxcode/beta/src/frontend/styles/pages/all.styl */
+/* line 713 : /Users/thomasamundsen/Documents/Traxnwaxcode/beta/src/frontend/styles/pages/all.styl */
 .safari_notsupported {
   margin-top: 60px;
 }
 
-/* line 712 : /Users/thomasamundsen/Documents/Traxnwaxcode/beta/src/frontend/styles/pages/all.styl */
+/* line 716 : /Users/thomasamundsen/Documents/Traxnwaxcode/beta/src/frontend/styles/pages/all.styl */
 .adtitle_1 {
   color: #fff;
   margin-top: 90px;
@@ -6323,13 +6325,13 @@ body .notifyjs-container .notifyjs-loopcast_success-base {
   transform: translate(-50%, -50%);
 }
 
-/* line 720 : /Users/thomasamundsen/Documents/Traxnwaxcode/beta/src/frontend/styles/pages/all.styl */
+/* line 724 : /Users/thomasamundsen/Documents/Traxnwaxcode/beta/src/frontend/styles/pages/all.styl */
 .advert_s2 {
   height: 400px;
   background: #07d159;
 }
 
-/* line 724 : /Users/thomasamundsen/Documents/Traxnwaxcode/beta/src/frontend/styles/pages/all.styl */
+/* line 728 : /Users/thomasamundsen/Documents/Traxnwaxcode/beta/src/frontend/styles/pages/all.styl */
 .adtext_1 {
   color: #fff;
   margin-top: 170px;
@@ -6338,6 +6340,35 @@ body .notifyjs-container .notifyjs-loopcast_success-base {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+}
+
+/* line 737 : /Users/thomasamundsen/Documents/Traxnwaxcode/beta/src/frontend/styles/pages/all.styl */
+@media (max-width: 640px) {
+
+/* line 738 : /Users/thomasamundsen/Documents/Traxnwaxcode/beta/src/frontend/styles/pages/all.styl */
+  .imagecontainer_notfound {
+    height: 120vh;
+  }
+
+/* line 740 : /Users/thomasamundsen/Documents/Traxnwaxcode/beta/src/frontend/styles/pages/all.styl */
+  .notfound {
+    margin-top: 50px;
+    margin-bottom: 20px;
+  }
+}
+
+/* line 746 : /Users/thomasamundsen/Documents/Traxnwaxcode/beta/src/frontend/styles/pages/all.styl */
+@media (max-width: 320px) {
+
+/* line 747 : /Users/thomasamundsen/Documents/Traxnwaxcode/beta/src/frontend/styles/pages/all.styl */
+  .imagecontainer_notfound {
+    height: 145vh;
+  }
+
+/* line 749 : /Users/thomasamundsen/Documents/Traxnwaxcode/beta/src/frontend/styles/pages/all.styl */
+  .notfound {
+    margin-top: 50px;
+  }
 }
 
 
