--- a/src/frontend/styles/pages/all.styl
+++ b/src/frontend/styles/pages/all.styl
@@ -653,10 +653,14 @@ PLAYER_HEIGHT = 55px
       margin: 0 10px
       cursor: pointer
       
+// 404 error page starts here
+      
 .notfound
-  margin-top: 150px
+  margin-top: 90px
   color: white
   font-size: 60px
+  line-height: 60px
+  margin-bottom: 10px
   
 .notfoundp
   margin-top: 20px
@@ -730,6 +734,22 @@ PLAYER_HEIGHT = 55px
   transform: translate(-50%,-50%)
  
 
+@media (max-width 640px)
+  .imagecontainer_notfound
+    height: 120vh;
+  .notfound
+    margin-top: 50px
+    margin-bottom: 20px
+    
+    // iphone 5
+
+@media (max-width 320px) 
+  .imagecontainer_notfound
+    height: 145vh;
+  .notfound
+    margin-top: 50px
+    
+    
 
 
       
